[package]
name = "rsync-speedtest"
version = "0.1.0"
edition = "2021"
description = "Test speed (bandwidth) of different bind IP to rsync upstream"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
dirs = "4.0.0"
mktemp = "0.4.1"
subprocess = "0.2.9"
