[package]
name = "admirror-speedtest"
version = "0.3.0"
edition = "2021"
description = "Test speed (bandwidth) of different bind IP to rsync, http(s) and git upstream. Alleviate mirror site admin's trouble choosing fastest bind IP."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
dirs = "4.0.0"
libc = "0.2.138"
mktemp = "0.4.1"
signal-hook = "0.3.14"
